# webgenai

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  journal-webgenai.mdx  mkdocs.yml  pyproject.toml  sitemap.xml
ane_design_model/: __init__.py  benchmark.py  dataset_generator.py  inference.py  ml_layout_detector.py  model.py  model_trainer.py
architecture/: index.html
contributing/: index.html
docs/: architecture.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
paper/: main.aux  main.out  main.tex
reference/: index.html
research/: index.html
search/: search_index.json
sources/38c98b3d/: layout_detector.py  types.py
stylesheets/: extra.css
tests/: __init__.py  integration_test_model_trainer.py  test_benchmark.py  test_benchmark_cli_integration.py  test_benchmark_ml_detector_integration.py  test_cross_module_integration.py  test_inference_ml_layout_integration.py  test_merge_conflict_resolution.py  test_ml_layout_detector.py  test_model_trainer_inference_integration.py  unit_test_model_trainer.py
