[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webgenai"
version = "0.1.0"
description = "Generates optimized web components using neural networks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Young", email = "research@automate-capture.com" },
]
keywords = ["webcomponents", "generativeai", "neuralnetworks", "frontend", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/Lumi-node/webgenai"
Documentation = "https://lumi-node.github.io/webgenai/"
Repository = "https://github.com/Lumi-node/webgenai"
Issues = "https://github.com/Lumi-node/webgenai/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
